Moved the config options into its own separate config file for better modularity and readability, added the import of the flask migration functionality to allow for different database versions, fixed bug in css file that caused all hyperlinks to be white hidding the redirect links

--- a/app/static/css/Stylesheet.css
+++ b/app/static/css/Stylesheet.css
@@ -186,6 +186,6 @@ a{
 #profileDivider{
     clear:left;
 }
-a:link, a:visited{
+#banner a:link, #banner a:visited{
     color:white;
  }
